fix: we did not have a good chain of height: 100% divs
this did not enable users to add their own height: 100% elements
with scrollbars.

--- a/solara/server/assets/style.css
+++ b/solara/server/assets/style.css
@@ -109,3 +109,7 @@ div.highlight {
 .solara-content-main {
     animation: solara-fade-in 0.5s ease;
 }
+
+.solara-autorouter-content {
+    height: 100%;
+}
